--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
     </div>
   </main>
 
-  <!-- Dark Mode Toggle -->
   <div class="dark-mode-toggle">
     <label class="toggle-label">
       <input type="checkbox" id="darkModeToggle">
@@ -55,7 +54,7 @@
   </div>
 
   <footer class="footer">
-    <p>© 2025 Cipher. All rights reserved. | <a href="#">Privacy Policy</a></p>
+    <p>© Created by <a target='_blank' href="https://instagram.com/_abhinesh.exe"><font color=red>Abhinesh</font></a></p>
   </footer>
 
   <script src="script.js"></script>
